# Kursovaya_DB

./: README.txt
backend/: .gitignore  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2bb712c40d74_edit_types_of_tables.py  2d375e098584_add_connect_with_route_and_ts.py  428d45fa3b9c_edit_unique_values.py  ea00ebecf5f1_first_create.py
backend/src/: database.py  main.py
backend/src/transport/: models.py  schema.py
frontend/: package.json
frontend/src/: App.jsx  InfoRoute.jsx  Map.jsx  MapWrapper.jsx  Panel.jsx  index.scss  main.jsx
frontend/src/components/BS/: AddBS.jsx  ApplyBS.jsx  CancelBS.jsx  DelBS.jsx  ResBS.jsx
frontend/src/components/DelConn/: ApplyDel.jsx  CancelDelConn.jsx  DelConn.jsx
frontend/src/components/Edit/: ApplyEdit.jsx  CancelEdit.jsx  NextEdit.jsx
frontend/src/providers/: MapContext.jsx  MapProvider.jsx
