[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Leonid-poc <legeorg2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
databases = "^0.9.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
